--- a/ServicesTableViewCell.xib
+++ b/ServicesTableViewCell.xib
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Lato-Bold.ttf">
+            <string>Lato-Bold</string>
+        </mutableArray>
+        <mutableArray key="Lato-Regular.ttf">
+            <string>Lato-Regular</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -16,31 +24,31 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2AO-Qn-zH3">
-                        <rect key="frame" x="24" y="8" width="42" height="20"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="24" y="8" width="39" height="20"/>
+                        <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="16"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="estouaqui" translatesAutoresizingMaskIntoConstraints="NO" id="bl4-8M-MLl">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bl4-8M-MLl">
                         <rect key="frame" x="24" y="36" width="58" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="58" id="jaT-t5-H6k"/>
                             <constraint firstAttribute="height" constant="50" id="lgq-XL-JH9"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xp4-eX-jB3">
-                        <rect key="frame" x="90" y="36" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xp4-eX-jB3">
+                        <rect key="frame" x="90" y="36" width="333" height="16"/>
+                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
+                        <color key="textColor" red="0.16470588235294117" green="0.20784313725490194" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Xp4-eX-jB3" secondAttribute="bottom" constant="8" id="2vC-7P-Y53"/>
                     <constraint firstAttribute="bottomMargin" secondItem="bl4-8M-MLl" secondAttribute="bottom" constant="8" id="6Xn-nv-YDS"/>
                     <constraint firstItem="2AO-Qn-zH3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="16" id="EGI-ph-9tD"/>
                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="2AO-Qn-zH3" secondAttribute="trailing" id="Im3-zi-wea"/>
                     <constraint firstItem="Xp4-eX-jB3" firstAttribute="leading" secondItem="bl4-8M-MLl" secondAttribute="trailing" constant="8" id="L0x-Uo-k33"/>
-                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Xp4-eX-jB3" secondAttribute="bottom" constant="8" id="OWU-HE-hsP"/>
                     <constraint firstItem="2AO-Qn-zH3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="RE4-rC-Owq"/>
                     <constraint firstItem="Xp4-eX-jB3" firstAttribute="top" secondItem="bl4-8M-MLl" secondAttribute="top" id="fSK-9T-GQB"/>
                     <constraint firstItem="bl4-8M-MLl" firstAttribute="top" secondItem="2AO-Qn-zH3" secondAttribute="bottom" constant="8" id="fuG-ug-OLe"/>
@@ -48,7 +56,7 @@
                 </constraints>
             </tableViewCellContentView>
             <constraints>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Xp4-eX-jB3" secondAttribute="trailing" constant="33" id="JyE-ks-N4J"/>
+                <constraint firstAttribute="trailing" secondItem="Xp4-eX-jB3" secondAttribute="trailing" constant="33" id="HBD-7U-FPZ"/>
             </constraints>
             <connections>
                 <outlet property="imageview" destination="bl4-8M-MLl" id="xkY-Q9-u6n"/>
@@ -58,7 +66,4 @@
             <point key="canvasLocation" x="309" y="371.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="estouaqui" width="128" height="112"/>
-    </resources>
 </document>
