--- a/maiMobile-iOS/GnrTableViewCell.xib
+++ b/maiMobile-iOS/GnrTableViewCell.xib
@@ -3,68 +3,40 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Lato-Bold.ttf">
+            <string>Lato-Bold</string>
             <string>Lato-Bold</string>
         </mutableArray>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="AXY-iT-oYh" customClass="GnrTableViewCell" customModule="maiMobile_iOS" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="zIT-jl-QFu" detailTextLabel="MXZ-ru-Thg" style="IBUITableViewCellStyleValue1" id="AXY-iT-oYh" customClass="GnrTableViewCell" customModule="maiMobile_iOS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="378" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AXY-iT-oYh" id="ZTb-EE-tnE">
                 <rect key="frame" x="0.0" y="0.0" width="345" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5wX-Ir-9ah">
-                        <rect key="frame" x="56" y="8" width="231" height="43"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                        <color key="textColor" red="0.1647058824" green="0.20784313730000001" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zIT-jl-QFu">
+                        <rect key="frame" x="15" y="21" width="31" height="18"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="15"/>
+                        <color key="textColor" red="0.16470588235294117" green="0.20784313725490194" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WsJ-Ve-Q4G">
-                        <rect key="frame" x="295" y="22" width="50" height="16"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="16" id="RzO-js-jY4"/>
-                            <constraint firstAttribute="width" constant="50" id="p1c-4x-8Iw"/>
-                        </constraints>
+                    <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MXZ-ru-Thg">
+                        <rect key="frame" x="308" y="23" width="35" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="13"/>
-                        <color key="textColor" red="0.4549019608" green="0.4549019608" blue="0.4549019608" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.45490196078431372" green="0.45490196078431372" blue="0.45490196078431372" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gnrBlack" translatesAutoresizingMaskIntoConstraints="NO" id="d1q-vz-Whq">
-                        <rect key="frame" x="8" y="10" width="40" height="40"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="CGm-Gy-qF9"/>
-                            <constraint firstAttribute="width" constant="40" id="Elj-cW-dBv"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="d1q-vz-Whq" firstAttribute="leading" secondItem="ZTb-EE-tnE" secondAttribute="leading" constant="8" id="1px-KA-MN9"/>
-                    <constraint firstItem="d1q-vz-Whq" firstAttribute="centerY" secondItem="ZTb-EE-tnE" secondAttribute="centerY" id="Fqi-Q8-UiD"/>
-                    <constraint firstItem="5wX-Ir-9ah" firstAttribute="bottom" secondItem="ZTb-EE-tnE" secondAttribute="bottomMargin" id="HXG-4a-WR3"/>
-                    <constraint firstItem="5wX-Ir-9ah" firstAttribute="leading" secondItem="ZTb-EE-tnE" secondAttribute="leadingMargin" constant="48" id="Ip6-EI-eaR"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="WsJ-Ve-Q4G" secondAttribute="bottom" constant="13" id="Nye-Fy-1pT"/>
-                    <constraint firstItem="WsJ-Ve-Q4G" firstAttribute="top" secondItem="ZTb-EE-tnE" secondAttribute="topMargin" constant="14" id="Ras-hj-bMh"/>
-                    <constraint firstItem="WsJ-Ve-Q4G" firstAttribute="leading" secondItem="5wX-Ir-9ah" secondAttribute="trailing" constant="8" symbolic="YES" id="f3d-Fo-bwZ"/>
-                    <constraint firstItem="5wX-Ir-9ah" firstAttribute="centerY" secondItem="ZTb-EE-tnE" secondAttribute="centerY" id="re8-MI-q9p"/>
-                    <constraint firstItem="5wX-Ir-9ah" firstAttribute="top" secondItem="ZTb-EE-tnE" secondAttribute="topMargin" id="u0c-Gp-ZNc"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="WsJ-Ve-Q4G" secondAttribute="trailing" constant="-8" id="vJO-UH-ZuH"/>
-                </constraints>
             </tableViewCellContentView>
-            <connections>
-                <outlet property="rightDetailLabel" destination="WsJ-Ve-Q4G" id="DNw-Id-Nop"/>
-                <outlet property="titleLabel" destination="5wX-Ir-9ah" id="7mr-xP-I9C"/>
-            </connections>
             <point key="canvasLocation" x="401" y="379"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="gnrBlack" width="42" height="42"/>
-    </resources>
 </document>
