--- a/ServicesTableViewCell.xib
+++ b/ServicesTableViewCell.xib
@@ -16,11 +16,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="serviceCell" id="KGk-i7-Jjw" customClass="ServicesTableViewCell" customModule="maiMobile_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="456" height="103"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="serviceCell" rowHeight="152" id="KGk-i7-Jjw" customClass="ServicesTableViewCell" customModule="maiMobile_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="456" height="152"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="423" height="102"/>
+                <rect key="frame" x="0.0" y="0.0" width="423" height="151"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2AO-Qn-zH3">
@@ -30,14 +30,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bl4-8M-MLl">
-                        <rect key="frame" x="24" y="36" width="58" height="50"/>
+                        <rect key="frame" x="24" y="36" width="78" height="78"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="58" id="jaT-t5-H6k"/>
-                            <constraint firstAttribute="height" constant="50" id="lgq-XL-JH9"/>
+                            <constraint firstAttribute="width" constant="78" id="jaT-t5-H6k"/>
+                            <constraint firstAttribute="height" constant="78" id="lgq-XL-JH9"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xp4-eX-jB3">
-                        <rect key="frame" x="90" y="36" width="333" height="16"/>
+                        <rect key="frame" x="110" y="36" width="313" height="16"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
                         <color key="textColor" red="0.16470588235294117" green="0.20784313725490194" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -45,7 +45,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Xp4-eX-jB3" secondAttribute="bottom" constant="8" id="2vC-7P-Y53"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="bl4-8M-MLl" secondAttribute="bottom" constant="8" id="6Xn-nv-YDS"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="bl4-8M-MLl" secondAttribute="bottom" constant="29" id="6Xn-nv-YDS"/>
                     <constraint firstItem="2AO-Qn-zH3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="16" id="EGI-ph-9tD"/>
                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="2AO-Qn-zH3" secondAttribute="trailing" id="Im3-zi-wea"/>
                     <constraint firstItem="Xp4-eX-jB3" firstAttribute="leading" secondItem="bl4-8M-MLl" secondAttribute="trailing" constant="8" id="L0x-Uo-k33"/>
@@ -63,7 +63,7 @@
                 <outlet property="noteLabel" destination="Xp4-eX-jB3" id="MSX-a6-sRL"/>
                 <outlet property="titleLabel" destination="2AO-Qn-zH3" id="I0X-9G-JKy"/>
             </connections>
-            <point key="canvasLocation" x="309" y="371.5"/>
+            <point key="canvasLocation" x="151" y="363"/>
         </tableViewCell>
     </objects>
 </document>
