TowTruck image issue

--- a/maiMobile-iOS/Base.lproj/Main.storyboard
+++ b/maiMobile-iOS/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="0bO-A3-hln">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="rC8-Y9-km1" sceneMemberID="viewController">
+                <tabBarController id="rC8-Y9-km1" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="i5V-TK-VlQ">
                         <autoresizingMask key="autoresizingMask"/>
@@ -362,12 +362,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QXq-Hr-CL0">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="maiReboque" translatesAutoresizingMaskIntoConstraints="NO" id="8ER-FE-Uow">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QXq-Hr-CL0">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="maiReboque" translatesAutoresizingMaskIntoConstraints="NO" id="8ER-FE-Uow">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tFT-Xu-2S9">
                                         <rect key="frame" x="20" y="112" width="560" height="54"/>
                                         <constraints>
@@ -436,11 +436,6 @@
                                                     <constraint firstAttribute="width" constant="4" id="mkI-7K-A9r"/>
                                                 </constraints>
                                             </view>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yMf-GY-OJo">
-                                                <rect key="frame" x="8" y="9" width="168" height="30"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WCG-K1-EdF">
                                                 <rect key="frame" x="196" y="8" width="168" height="30"/>
                                                 <constraints>
@@ -451,6 +446,11 @@
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GH0-Xs-40R">
                                                 <rect key="frame" x="384" y="9" width="168" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yMf-GY-OJo">
+                                                <rect key="frame" x="8" y="9" width="168" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -494,30 +494,23 @@
                                 <constraints>
                                     <constraint firstItem="aHJ-Ki-Y2c" firstAttribute="top" secondItem="Fst-wT-aJz" secondAttribute="bottom" constant="17" id="1Pb-DH-JWM"/>
                                     <constraint firstItem="bwY-b5-OaH" firstAttribute="leading" secondItem="NHc-qI-E5S" secondAttribute="leading" id="2Mj-Cg-zRV"/>
-                                    <constraint firstItem="8ER-FE-Uow" firstAttribute="top" secondItem="QXq-Hr-CL0" secondAttribute="top" id="3as-QV-Lxi"/>
-                                    <constraint firstAttribute="bottom" secondItem="8ER-FE-Uow" secondAttribute="bottom" id="9qy-AQ-McJ"/>
-                                    <constraint firstItem="tFT-Xu-2S9" firstAttribute="centerX" secondItem="8ER-FE-Uow" secondAttribute="centerX" id="Ccs-w1-AJ9"/>
                                     <constraint firstAttribute="trailing" secondItem="BJ9-lO-MHm" secondAttribute="trailing" constant="20" id="Egw-cr-IZ4"/>
                                     <constraint firstAttribute="trailing" secondItem="Fst-wT-aJz" secondAttribute="trailing" constant="20" id="Hzq-nQ-swq"/>
                                     <constraint firstItem="EjA-2w-Yc7" firstAttribute="top" secondItem="QXq-Hr-CL0" secondAttribute="top" constant="20" id="IOi-1E-dpu"/>
-                                    <constraint firstItem="8ER-FE-Uow" firstAttribute="centerY" secondItem="QXq-Hr-CL0" secondAttribute="centerY" id="KFg-WP-Hk1"/>
                                     <constraint firstItem="EjA-2w-Yc7" firstAttribute="leading" secondItem="QXq-Hr-CL0" secondAttribute="leading" constant="20" id="KRT-oY-CO6"/>
                                     <constraint firstAttribute="bottom" secondItem="BJ9-lO-MHm" secondAttribute="bottom" constant="8" id="T1b-Qz-ijH"/>
                                     <constraint firstAttribute="trailing" secondItem="tFT-Xu-2S9" secondAttribute="trailing" constant="20" id="WJh-xP-lAS"/>
+                                    <constraint firstItem="BJ9-lO-MHm" firstAttribute="top" secondItem="aHJ-Ki-Y2c" secondAttribute="bottom" constant="231" id="WY0-AU-zcC"/>
                                     <constraint firstItem="Fst-wT-aJz" firstAttribute="top" secondItem="NHc-qI-E5S" secondAttribute="bottom" constant="15" id="XoG-F5-4n7"/>
-                                    <constraint firstItem="Fst-wT-aJz" firstAttribute="leading" secondItem="8ER-FE-Uow" secondAttribute="trailing" constant="-580" id="aHM-fp-eEb"/>
                                     <constraint firstItem="aHJ-Ki-Y2c" firstAttribute="centerX" secondItem="QXq-Hr-CL0" secondAttribute="centerX" id="c9b-Lt-b0C"/>
                                     <constraint firstItem="tFT-Xu-2S9" firstAttribute="top" secondItem="EjA-2w-Yc7" secondAttribute="bottom" constant="8" id="dwt-eX-JZa"/>
                                     <constraint firstItem="NHc-qI-E5S" firstAttribute="leading" secondItem="Fst-wT-aJz" secondAttribute="leading" id="gau-KM-bHb"/>
-                                    <constraint firstItem="Fst-wT-aJz" firstAttribute="centerX" secondItem="8ER-FE-Uow" secondAttribute="centerX" id="h2a-DZ-ya2"/>
                                     <constraint firstItem="bwY-b5-OaH" firstAttribute="top" secondItem="tFT-Xu-2S9" secondAttribute="bottom" constant="8" id="hGV-SJ-HVD"/>
                                     <constraint firstItem="BJ9-lO-MHm" firstAttribute="leading" secondItem="QXq-Hr-CL0" secondAttribute="leading" constant="20" id="itH-Dl-yrU"/>
                                     <constraint firstItem="Fst-wT-aJz" firstAttribute="leading" secondItem="QXq-Hr-CL0" secondAttribute="leading" constant="20" id="lTg-0S-aRn"/>
                                     <constraint firstItem="bwY-b5-OaH" firstAttribute="leading" secondItem="QXq-Hr-CL0" secondAttribute="leading" constant="20" id="pff-rK-LKO"/>
                                     <constraint firstItem="tFT-Xu-2S9" firstAttribute="leading" secondItem="QXq-Hr-CL0" secondAttribute="leading" constant="20" id="qnK-jF-Oca"/>
                                     <constraint firstItem="NHc-qI-E5S" firstAttribute="top" secondItem="bwY-b5-OaH" secondAttribute="bottom" constant="8" symbolic="YES" id="uc4-Kj-mzp"/>
-                                    <constraint firstItem="8ER-FE-Uow" firstAttribute="centerX" secondItem="QXq-Hr-CL0" secondAttribute="centerX" id="vgx-Th-Ujj"/>
-                                    <constraint firstItem="BJ9-lO-MHm" firstAttribute="top" secondItem="8ER-FE-Uow" secondAttribute="bottom" constant="-23" id="yE7-j6-vZQ"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -528,7 +521,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="QXq-Hr-CL0" firstAttribute="centerX" secondItem="Jkn-zT-63g" secondAttribute="centerX" id="2m7-wY-y2J"/>
                             <constraint firstItem="QXq-Hr-CL0" firstAttribute="leading" secondItem="Jkn-zT-63g" secondAttribute="leading" id="RyA-4T-mIY"/>
                             <constraint firstItem="vIz-Rs-xde" firstAttribute="top" secondItem="QXq-Hr-CL0" secondAttribute="bottom" id="fD4-Ti-UDE"/>
                             <constraint firstItem="QXq-Hr-CL0" firstAttribute="top" secondItem="Jkn-zT-63g" secondAttribute="topMargin" id="skh-jN-xPx"/>
@@ -877,7 +869,7 @@
         <image name="MAilogo" width="240" height="84"/>
         <image name="bulletListBarButtonItem" width="24" height="24"/>
         <image name="directions_white" width="46" height="50"/>
-        <image name="maiReboque" width="640" height="961"/>
+        <image name="maiReboque" width="500" height="736"/>
         <image name="menu_bar_destaque_active" width="24" height="24"/>
         <image name="menu_bar_destaque_inactive" width="24" height="24"/>
         <image name="menu_bar_seguranca_active" width="24" height="24"/>
