--- a/ServicesTableViewCell.xib
+++ b/ServicesTableViewCell.xib
@@ -16,54 +16,58 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="serviceCell" rowHeight="152" id="KGk-i7-Jjw" customClass="ServicesTableViewCell" customModule="maiMobile_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="456" height="152"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="serviceCell" rowHeight="103" id="KGk-i7-Jjw" customClass="ServicesTableViewCell" customModule="maiMobile_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="423" height="151"/>
+                <rect key="frame" x="0.0" y="0.0" width="287" height="102"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2AO-Qn-zH3">
-                        <rect key="frame" x="24" y="8" width="39" height="20"/>
+                        <rect key="frame" x="8" y="8" width="279" height="20"/>
                         <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="16"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bl4-8M-MLl">
-                        <rect key="frame" x="24" y="36" width="78" height="78"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="78" id="jaT-t5-H6k"/>
-                            <constraint firstAttribute="height" constant="78" id="lgq-XL-JH9"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xp4-eX-jB3">
-                        <rect key="frame" x="110" y="36" width="313" height="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xp4-eX-jB3">
+                        <rect key="frame" x="61" y="36" width="226" height="16"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
                         <color key="textColor" red="0.16470588235294117" green="0.20784313725490194" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bl4-8M-MLl">
+                        <rect key="frame" x="8" y="36" width="45" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="KOw-2S-jkp"/>
+                            <constraint firstAttribute="width" constant="45" id="VsZ-mO-HVA"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Xp4-eX-jB3" secondAttribute="bottom" constant="8" id="2vC-7P-Y53"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="bl4-8M-MLl" secondAttribute="bottom" constant="29" id="6Xn-nv-YDS"/>
-                    <constraint firstItem="2AO-Qn-zH3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="16" id="EGI-ph-9tD"/>
-                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="2AO-Qn-zH3" secondAttribute="trailing" id="Im3-zi-wea"/>
-                    <constraint firstItem="Xp4-eX-jB3" firstAttribute="leading" secondItem="bl4-8M-MLl" secondAttribute="trailing" constant="8" id="L0x-Uo-k33"/>
-                    <constraint firstItem="2AO-Qn-zH3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="RE4-rC-Owq"/>
-                    <constraint firstItem="Xp4-eX-jB3" firstAttribute="top" secondItem="bl4-8M-MLl" secondAttribute="top" id="fSK-9T-GQB"/>
-                    <constraint firstItem="bl4-8M-MLl" firstAttribute="top" secondItem="2AO-Qn-zH3" secondAttribute="bottom" constant="8" id="fuG-ug-OLe"/>
-                    <constraint firstItem="bl4-8M-MLl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="16" id="ozd-Ji-hrx"/>
+                    <constraint firstItem="2AO-Qn-zH3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="PSc-qW-wkr"/>
+                    <constraint firstItem="bl4-8M-MLl" firstAttribute="top" secondItem="2AO-Qn-zH3" secondAttribute="bottom" constant="8" id="Uqa-Vp-22B"/>
+                    <constraint firstItem="bl4-8M-MLl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="bqd-aW-jwe"/>
+                    <constraint firstItem="2AO-Qn-zH3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="gWP-Gf-Nca"/>
+                    <constraint firstItem="Xp4-eX-jB3" firstAttribute="top" secondItem="2AO-Qn-zH3" secondAttribute="bottom" constant="8" id="os6-fO-VDR"/>
+                    <constraint firstItem="bl4-8M-MLl" firstAttribute="top" secondItem="Xp4-eX-jB3" secondAttribute="top" id="taM-cc-oAB"/>
+                    <constraint firstItem="Xp4-eX-jB3" firstAttribute="leading" secondItem="bl4-8M-MLl" secondAttribute="trailing" constant="8" id="wAP-Jv-nrW"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="taM-cc-oAB"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Xp4-eX-jB3" secondAttribute="trailing" constant="33" id="HBD-7U-FPZ"/>
+                <constraint firstAttribute="trailing" secondItem="2AO-Qn-zH3" secondAttribute="trailing" constant="33" id="7pU-t6-aj4"/>
+                <constraint firstAttribute="trailing" secondItem="Xp4-eX-jB3" secondAttribute="trailing" constant="33" id="aB9-BO-mof"/>
             </constraints>
             <connections>
-                <outlet property="imageview" destination="bl4-8M-MLl" id="xkY-Q9-u6n"/>
+                <outlet property="leftImageView" destination="bl4-8M-MLl" id="O7I-rT-U8n"/>
                 <outlet property="noteLabel" destination="Xp4-eX-jB3" id="MSX-a6-sRL"/>
                 <outlet property="titleLabel" destination="2AO-Qn-zH3" id="I0X-9G-JKy"/>
             </connections>
-            <point key="canvasLocation" x="151" y="363"/>
+            <point key="canvasLocation" x="267" y="332.5"/>
         </tableViewCell>
     </objects>
 </document>
