--- a/maiMobile-iOS/Base.lproj/Main.storyboard
+++ b/maiMobile-iOS/Base.lproj/Main.storyboard
@@ -164,16 +164,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NjI-bB-XZs">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4rS-z7-cKb">
                                 <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="NjI-bB-XZs" secondAttribute="trailing" id="5JD-H7-pmm"/>
-                            <constraint firstItem="V3m-WI-xX5" firstAttribute="top" secondItem="NjI-bB-XZs" secondAttribute="bottom" id="YrG-r2-Ul8"/>
-                            <constraint firstItem="NjI-bB-XZs" firstAttribute="leading" secondItem="iXj-0Y-CQB" secondAttribute="leading" id="pt5-Tr-Yt2"/>
-                            <constraint firstItem="NjI-bB-XZs" firstAttribute="top" secondItem="Au7-2h-kQU" secondAttribute="bottom" id="wsE-Iq-nrQ"/>
+                            <constraint firstItem="4rS-z7-cKb" firstAttribute="leading" secondItem="iXj-0Y-CQB" secondAttribute="leading" id="A97-PP-3WW"/>
+                            <constraint firstItem="4rS-z7-cKb" firstAttribute="centerX" secondItem="iXj-0Y-CQB" secondAttribute="centerX" id="CLd-M6-dz1"/>
+                            <constraint firstItem="V3m-WI-xX5" firstAttribute="top" secondItem="4rS-z7-cKb" secondAttribute="bottom" id="K5O-5I-hTo"/>
+                            <constraint firstAttribute="trailing" secondItem="4rS-z7-cKb" secondAttribute="trailing" id="MAr-HW-ZVg"/>
+                            <constraint firstItem="4rS-z7-cKb" firstAttribute="top" secondItem="Au7-2h-kQU" secondAttribute="bottom" id="dlU-6D-Nyd"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Cq1-p3-FyS">
@@ -185,6 +186,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="barButtonItem" destination="hIO-hI-sdo" id="x2z-m6-boP"/>
+                        <outlet property="containerView" destination="4rS-z7-cKb" id="a2i-mT-3c0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nlM-mF-94M" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -203,20 +205,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y32-zx-e1G">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <color key="backgroundColor" red="0.98431372549019602" green="0.86274509803921573" blue="0.1764705882352941" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Ndd-uw-IrP">
+                                <rect key="frame" x="20" y="72" width="560" height="29"/>
+                                <segments>
+                                    <segment title="TUDO"/>
+                                    <segment title="GNR"/>
+                                    <segment title="PSP"/>
+                                </segments>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="segmentedControlAction:" destination="Ond-Rp-8oi" eventType="valueChanged" id="XFI-ck-v3Y"/>
+                                </connections>
+                            </segmentedControl>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Zm2-hD-3BL">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="108" width="600" height="492"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Zm2-hD-3BL" firstAttribute="top" secondItem="Ndd-uw-IrP" secondAttribute="bottom" constant="8" id="06j-ho-g7i"/>
+                            <constraint firstItem="y32-zx-e1G" firstAttribute="leading" secondItem="Zm2-hD-3BL" secondAttribute="leading" id="10b-GM-pgV"/>
+                            <constraint firstItem="Ndd-uw-IrP" firstAttribute="top" secondItem="qMA-2q-j3y" secondAttribute="bottom" constant="8" id="8ih-Dk-z7H"/>
                             <constraint firstItem="L1Q-vC-Kjc" firstAttribute="top" secondItem="Zm2-hD-3BL" secondAttribute="bottom" id="9wG-cj-v1p"/>
+                            <constraint firstItem="y32-zx-e1G" firstAttribute="trailing" secondItem="Zm2-hD-3BL" secondAttribute="trailing" id="B5N-OH-fxM"/>
+                            <constraint firstItem="Ndd-uw-IrP" firstAttribute="leading" secondItem="DOl-p3-Kwb" secondAttribute="leadingMargin" id="H16-i8-KYo"/>
                             <constraint firstItem="Zm2-hD-3BL" firstAttribute="leading" secondItem="DOl-p3-Kwb" secondAttribute="leading" id="KXE-wS-OCG"/>
+                            <constraint firstItem="Ndd-uw-IrP" firstAttribute="centerX" secondItem="DOl-p3-Kwb" secondAttribute="centerX" id="Qgw-fa-9hi"/>
+                            <constraint firstItem="y32-zx-e1G" firstAttribute="leading" secondItem="DOl-p3-Kwb" secondAttribute="leadingMargin" constant="-20" id="bCN-UQ-x3u"/>
                             <constraint firstAttribute="trailing" secondItem="Zm2-hD-3BL" secondAttribute="trailing" id="ebG-vv-Mu9"/>
+                            <constraint firstItem="y32-zx-e1G" firstAttribute="top" secondItem="qMA-2q-j3y" secondAttribute="bottom" id="l5M-7W-xGh"/>
+                            <constraint firstItem="Zm2-hD-3BL" firstAttribute="top" secondItem="y32-zx-e1G" secondAttribute="bottom" id="l7H-XO-N6T"/>
                             <constraint firstItem="Zm2-hD-3BL" firstAttribute="top" secondItem="qMA-2q-j3y" secondAttribute="bottom" id="rLH-LC-eji"/>
+                            <constraint firstItem="Ndd-uw-IrP" firstAttribute="trailing" secondItem="DOl-p3-Kwb" secondAttribute="trailingMargin" id="wfg-Su-S8d"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="y32-zx-e1G" secondAttribute="trailing" constant="-20" id="wvi-B2-iji"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="rLH-LC-eji"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="mapView" destination="Zm2-hD-3BL" id="YEV-qG-YoX"/>
+                        <outlet property="segmentedControl" destination="Ndd-uw-IrP" id="2lk-mg-FFr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oIX-c8-O8V" userLabel="First Responder" sceneMemberID="firstResponder"/>
